examples/test/testpolicy598.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy598
  namespace: namespace214
spec:
  podSelector:
    matchLabels:
      key28: value46
      key15: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value19
          key30: value23
      podSelector:
        matchLabels:
          key45: value44
          key6: value8
